--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: webcolor
-        image: fabricioveronez/web-page:creen
+        image: fabricioveronez/web-page:green
         ports:
         - containerPort: 80
 ---
